setups/echo/gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: teg-echo-gateway
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  gatewayClassName: teg
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      port: 443
      hostname: echo-teg.tetrate.io
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: teg-echo-cert
